--- a/app/assets/stylesheets/components/_sub_header_small.scss
+++ b/app/assets/stylesheets/components/_sub_header_small.scss
@@ -8,7 +8,7 @@
   left: 0;
 
   max-height: 0;
-  height: 7vh;
+  height: 40px;
   width: 100vw;
 
   background-color: $bright;
@@ -101,7 +101,7 @@
 @media screen and (max-width: 1045px) {
   .sub_header_small {
     position: fixed;
-    top: 91vh;
+    bottom: 0;
     left: 0;
 
     display: flex;
